<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.editpersoninfo.EditPersonInfoFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_photo"
        app:layout_constraintEnd_toEndOf="@+id/img_user_profile_edit"
        app:layout_constraintStart_toStartOf="@+id/img_user_profile_edit"
        app:layout_constraintTop_toBottomOf="@+id/img_user_profile_edit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/name_layout"
        app:layout_constraintStart_toStartOf="@+id/name_layout"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName|textCapWords"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categories_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_category"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/surname_layout"
        app:layout_constraintStart_toStartOf="@+id/surname_layout"
        app:layout_constraintTop_toBottomOf="@id/surname_layout">

        <AutoCompleteTextView
            android:id="@+id/categoties_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName|textCapWords"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_of_birthday_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_date_of_birthday"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="@+id/categories_layout"
        app:layout_constraintStart_toStartOf="@+id/categories_layout"
        app:layout_constraintTop_toBottomOf="@id/categories_layout">

        <EditText
            android:id="@+id/date_of_birthday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_user_profile_edit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>